# rocit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: README.md
examples/configs/: HG008_predict_config.yaml  HG008_preprocess_config.yaml  HG008_run_config.yaml  HG008_train_config.yaml
rocit/: __init__.py  pipeline.py
rocit/data/: dataset.py
setup_scripts/: download_bigwig_files.py  generate_cell_map_df.py
src/rocit/: __init__.py  cli.py  config.py  constants.py  pipeline.py  validation.py
src/rocit/data/: __init__.py  datamodule.py  dataset.py
src/rocit/models/: __init__.py  lightning_module.py  model_architecture.py
src/rocit/preprocessing/: __init__.py  bam_tools.py  extract_pacbio_cpg_info.py  loh_data_labeller.py  prepare_somatic_data.py  process_cpg_distribution.py  qc.py  read_labels.py  snv_data_labeller.py  train_data.py  tumor_data_labeller.py  variant_processing.py
