[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "rocit"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.9.1",
    "pytorch-lightning>=2.6.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "polars>=1.36.1",
]

