[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "rocit.__version__" }

[project]
name = "rocit"
dynamic = ["version"]
description = "Deep learning classifier for tumor-derived long reads using CpG methylation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Toby Baker", email = "tobybaker97@gmail.com" },
]
keywords = ["bioinformatics", "cancer", "methylation", "long-read", "deep-learning", "pacbio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "polars>=1.0.0",
    "pysam>=0.22.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
]

[project.urls]
Homepage = "https://github.com/tobybaker/rocit"
Repository = "https://github.com/tobybaker/rocit"
"Bug Tracker" = "https://github.com/tobybaker/rocit/issues"

[project.scripts]
rocit = "rocit.cli:main"
